--- a/pair.html
+++ b/pair.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pair with Me</title>
+  <title>FIREMD🔥PAIR</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
@@ -12,7 +12,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background: linear-gradient(to bottom, #ffffff, #ebebeb);
+      background: linear-gradient(to bottom, #000000, #434343);
       font-family: Arial, sans-serif;
     }
 
@@ -28,31 +28,31 @@
       padding: 20px;
       position: relative;
       text-align: center;
-      background-color: #fff;
+      background-color: rgb(0, 0, 0);
       border-radius: 10px;
       transform: perspective(1000px) rotateY(0deg);
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+      box-shadow: 0 0 20px rgba(250, 249, 249, 0.7);
       position: relative;
     }
 
     #text {
-      color: #000; /* Set the text color to black (#000) */
+      color: #f6f5f5; /* Set the text color to black (#000) */
     }
 
     .input-container input {
-      color: #000; /* Set the text color to black (#000) */
+      color: #f1eaea; /* Set the text color to black (#000) */
     }
 
     .centered-text {
-      color: #000; /* Set the text color to black (#000) */
+      color: #e9e4e4; /* Set the text color to black (#000) */
     }
 
     .input-container {
       display: flex;
-      background: white;
+      background: rgb(10, 10, 10);
       border-radius: 1rem;
-      background: linear-gradient(45deg, #c5c5c5 0%, #ffffff 100%);
-      box-shadow: 20px 20px 20px #d8d8d8, -10px -10px 20px #f8f8f8;
+      background: black;
+      box-shadow: black;
       padding: 0.3rem;
       gap: 0.3rem;
       max-width: 300px; /* Set your desired maximum width */
@@ -67,33 +67,34 @@
       flex-basis: 75%;
       padding: 1rem;
       border: none;
-      border-left: 2px solid #4998FF;
-      color: #5e5e5e;
+      border-left: 2px solid #ecf2f8;
+      color: #000000;
       transition: all 0.2s ease-in-out;
     }
 
     .input-container input:focus {
-      border-left: 2px solid #4998FF;
+      border-left: 2px solid #ecf2f8;
       outline: none;
-      box-shadow: inset 13px 13px 10px #BFF0FA, inset -13px -13px 10px #f4f4f4;
+      box-shadow: inset 13px 13px 10px #f0f2f3, inset -13px -13px 10px #f4f4f4;
     }
 
     .input-container button {
       flex-basis: 25%;
       padding: 1rem;
-      background: linear-gradient(135deg, #BFF0FA 0%, #4998FF 100%);
+      background: #000000;
       font-weight: 900;
       letter-spacing: 0.3rem;
       text-transform: uppercase;
       color: white;
-      border: none;
+      border: 2px solid red;
       width: 100%;
       border-radius: 0 1rem 1rem 0;
       transition: all 0.2s ease-in-out;
     }
 
     .input-container button:hover {
-      background: linear-gradient(135deg, #BFF0FA 0%, #4998ffc4 100%);
+      background: red;
+      border-color: green;
     }
 
     @media (max-width: 500px) {
@@ -142,11 +143,11 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">© 𝑫𝑶𝑵 𝑻𝑬𝑪𝑯</h3>
+            <h3 class="centered-text">FIRE-MD 🔥 PAIRING CODE🔥</h3>
             <br>
             <h6>Enter your number with a country code.</h6>
             <div class="input-container">
-              <input placeholder="263775614627" type="number" id="number" placeholder="Enter your phone number with a country code" name="">
+              <input placeholder="2347014742630" type="number" id="number" placeholder="Enter your phone number with a country code" name="">
               <button id="submit">Submit</button>
             </div>
             
@@ -207,7 +208,7 @@
         a.innerHTML = '<a style="color:black;font-weight:bold">Please wait for some time</a><br><br>';
         let { data } = await axios(`/code?number=${bc}`);
         let code = data.code || "Service Unavailable";
-        a.innerHTML = '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:black;font-weight:bold">' + code + '</span></font><br><br><br>';
+        a.innerHTML = '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:white;font-weight:bold">' + code + '</span></font><br><br><br>';
       }
     });
   </script>
